# copier-poetry

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  Makefile  README.md  copier.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
changelog/: index.html
code_of_conduct/: index.html
contributing/: index.html
docs/: work.md
generate/: index.html
license/: index.html
project/: .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md.jinja  LICENSE.jinja  Makefile.jinja  README.md.jinja  duties.py  duties.py.jinja  mkdocs.yml.jinja  pyproject.toml.jinja
project/.github/workflows/: ci.yml
project/config/: coverage.ini.jinja  pytest.ini
project/docs/: credits.md  macros.py
project/scripts/: multirun.sh  post_generation.py.jinja  setup.sh
project/src/{{python_package_import_name}}/: cli.py.jinja
requirements/: index.html
search/: search_index.json
tests/: test_generate.sh
update/: index.html
work/: index.html
